--- a/src/components/ui/Button.astro
+++ b/src/components/ui/Button.astro
@@ -1,8 +1,13 @@
 ---
-const { text = "Click", url = "#" } = Astro.props;
+const { className = "", text = "Click", url = "#" } = Astro.props;
 ---
 
-<a class="btn-animated" href={url} target="_blank" rel="noopener noreferrer">
+<a
+  class={`btn-animated ${className}`}
+  href={url}
+  target="_blank"
+  rel="noopener noreferrer"
+>
   {text}
 </a>
 
