--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
+import FeaturesSection from "@components/FeaturesSection.astro";
 import HomeSection from "@components/HomeSection.astro";
 import Layout from "@layouts/Layout.astro";
 ---
 
 <Layout>
   <HomeSection />
+  <FeaturesSection />
 </Layout>
