Navbar static and styles fixed

--- a/src/components/FeaturesSection.astro
+++ b/src/components/FeaturesSection.astro
@@ -64,6 +64,7 @@ const features = [
     padding: 4rem 1rem 2rem;
     gap: 2.5rem;
     overflow: hidden;
+    padding-top: calc(var(--nav-height) + var(--padding-top-nav-section));
   }
 
   .title {
