More padding in the home section of the tablet or PC

--- a/src/components/HomeSection.astro
+++ b/src/components/HomeSection.astro
@@ -90,6 +90,14 @@ text-animate-fade-slide-up">
     color: #dcdcdc;
     font-size: 0.9rem;
   }
+
+  @media (min-width: 768px) {
+    .home {
+      padding-top: calc(
+        var(--nav-height) + var(--padding-top-nav-section) + 50px
+      );
+    }
+  }
 </style>
 
 <script>
