--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -173,6 +173,12 @@ import logo from "@public/logo.webp";
     color: var(--purple2);
   }
 
+  .subtitle {
+    color: #dcdcdc;
+    font-size: 1.15rem;
+    line-height: 1.6;
+  }
+
   .stars {
     position: fixed;
     top: 0;
