--- a/src/components/FeaturesSection.astro
+++ b/src/components/FeaturesSection.astro
@@ -41,7 +41,7 @@ const features = [
 ];
 ---
 
-<section class="features">
+<section class="features website-section">
   <h2 class="title animate-fade-slide-down">Main features</h2>
 
   <div class="features-grid animate-fade-slide-up">
@@ -55,15 +55,6 @@ const features = [
 
 <style>
   .features {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    min-height: 100vh;
-    padding: 4rem 1rem 2rem;
-    gap: 2.5rem;
-    overflow: hidden;
     padding-top: calc(var(--nav-height) + var(--padding-top-nav-section));
   }
 
