--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import CodeSection from "@components/CodeSection.astro";
 import FeaturesSection from "@components/FeaturesSection.astro";
 import HomeSection from "@components/HomeSection.astro";
+import PricingSection from "@components/PricingSection.astro";
 import Layout from "@layouts/Layout.astro";
 
 import "prismjs/components/prism-java.js";
@@ -12,4 +13,5 @@ import "prismjs/themes/prism-tomorrow.css";
   <HomeSection />
   <FeaturesSection />
   <CodeSection />
+  <PricingSection />
 </Layout>
