--- a/src/components/cards/JavaCodeCard.astro
+++ b/src/components/cards/JavaCodeCard.astro
@@ -5,7 +5,7 @@ const { title, code } = Astro.props;
 const highlightedCode = Prism.highlight(code, Prism.languages.java, "java");
 ---
 
-<article class="card">
+<article class="card animate-fade-slide-up">
   <h3 class="card-title">{title}</h3>
   <pre
     class="code-block"><code class="language-java" set:html={highlightedCode} /></pre>
