--- a/src/components/cards/PricingCard.astro
+++ b/src/components/cards/PricingCard.astro
@@ -22,7 +22,12 @@ const {
     }
   </ul>
 
-  <a href={buttonUrl} class="action-btn">
+  <a
+    href={buttonUrl}
+    target="_blank"
+    rel="noopener noreferrer"
+    class="action-btn"
+  >
     {buttonText}
   </a>
 </article>
