--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -36,6 +36,12 @@ import logo from "@public/logo.webp";
       </ul>
     </nav>
     <slot />
+    <footer>
+      <span
+        >© 2025 Nebula Obfuscator. Protecting your Java code with
+        state-of-the-art technology.
+      </span>
+    </footer>
   </body>
 </html>
 
@@ -127,6 +133,24 @@ import logo from "@public/logo.webp";
 
   .nav-item a {
     color: #fff;
+  }
+
+  footer {
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    padding: 40px 0;
+    border-top: 1px solid var(--purple1);
+    color: #fff;
+    margin-top: 4rem;
+  }
+
+  footer span {
+    font-size: 0.95rem;
+    padding: 0 20px;
+    white-space: normal;
   }
 </style>
 
