Add animation class to footer for improved visibility on scroll

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -36,7 +36,7 @@ import logo from "@public/logo.webp";
       </ul>
     </nav>
     <slot />
-    <footer>
+    <footer class="animate-fade-slide-up">
       <span
         >© 2025 Nebula Obfuscator. Protecting your Java code with
         state-of-the-art technology.
