Hide scrollbar in body for a cleaner look

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -251,6 +251,10 @@ import logo from "@public/logo.webp";
     background: var(--gradient-main);
   }
 
+  body::-webkit-scrollbar {
+    display: none;
+  }
+
   .website-section {
     display: flex;
     flex-direction: column;
