--- a/src/components/FeaturesSection.astro
+++ b/src/components/FeaturesSection.astro
@@ -41,7 +41,7 @@ const features = [
 ];
 ---
 
-<section class="features website-section">
+<section class="features website-section" id="features">
   <h2 class="title animate-fade-slide-down">Main features</h2>
 
   <div class="features-grid animate-fade-slide-up">
